# rubydex

./: .document  .gitignore  .rdoc_options  AGENTS.md  Gemfile  README.md  Rakefile  dev.yml  rubydex.gemspec  rubydex.toml
.github/workflows/: ci.yml  cibuildgem.yaml  indexing_top_gems.yml  memleak.yml  pages.yml
docs/: architecture.md  resolution-performance.md
exe/: rdx
ext/rubydex/: declaration.c  definition.c  diagnostic.c  document.c  extconf.rb  graph.c  handle.h  location.c  query.c  query.h  reference.c  rubydex.c  signature.c  signature.h  utils.c  utils.h
lib/: rubydex.rb
lib/rubydex/: declaration.rb  errors.rb  graph.rb  location.rb  mcp_server.rb  reference.rb  signature.rb  version.rb
lib/rubydex/mcp_server/: protocol.rb
lib/rubydex/mcp_server/tools/: base_tool.rb  codebase_stats_tool.rb  find_constant_references_tool.rb  get_declaration_tool.rb  get_descendants_tool.rb  get_file_declarations_tool.rb  search_declarations_tool.rb
rbi/: rubydex.rbi
rust/: Cargo.toml
rust/rubydex/: Cargo.toml
rust/rubydex-mcp/: Cargo.toml
rust/rubydex-mcp/src/: server.rs
rust/rubydex-sys/: Cargo.toml
rust/rubydex-sys/src/: declaration_api.rs  definition_api.rs  graph_api.rs
rust/rubydex/benches/: graph_memory.rs
rust/rubydex/examples/: incremental.rs
rust/rubydex/src/: config.rs  dot.rs  errors.rs  indexing.rs  lib.rs  listing.rs  main.rs  query.rs  resolution.rs  resolution_tests.rs
rust/rubydex/src/indexing/: local_graph.rs  ruby_indexer.rs  ruby_indexer_tests.rs
rust/rubydex/src/model/: built_in.rs  comment.rs  declaration.rs  definitions.rs  document.rs  encoding.rs  graph.rs  identity_maps.rs  ids.rs  keywords.rs  name.rs  string_ref.rs  visibility.rs
rust/rubydex/src/operation/: applier.rs  mod.rs  printer.rs  ruby_builder.rs
rust/rubydex/src/test_utils/: graph_test.rs  local_graph_test.rs
rust/rubydex/tests/: cli.rs
test/: declaration_test.rb  definition_test.rb  graph_test.rb  location_test.rb  mcp_server_base_tool_test.rb  mcp_server_test.rb  mcp_server_tools_test.rb  signature_test.rb
utils/: bench-graph-memory
