[workspace]
members = [
  "rubydex",
  "rubydex-sys",
]

resolver = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
# See: https://doc.rust-lang.org/clippy/lints.html
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"
style = "deny"
pedantic = "warn"

ptr-as-ptr = { level = "deny", priority = 1 }
